General Sample updates

--- a/Assets/Stash.Popup/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Stash.Popup/Plugins/Android/AndroidManifest.xml
@@ -5,6 +5,19 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     
+    <!-- Required queries for Google Pay Payment Request API -->
+    <queries>
+        <intent>
+            <action android:name="org.chromium.intent.action.PAY"/>
+        </intent>
+        <intent>
+            <action android:name="org.chromium.intent.action.IS_READY_TO_PAY"/>
+        </intent>
+        <intent>
+            <action android:name="org.chromium.intent.action.UPDATE_PAYMENT_DETAILS"/>
+        </intent>
+    </queries>
+    
     <application>
         <!-- No specific activity declarations needed for plugin -->
     </application>
